tests/ui/const-generics/mgca/type-const-inherent-value-type-mismatch.current.stderr
error: the constant `"this isn't a usize"` is not of type `usize`
  --> $DIR/type-const-inherent-value-type-mismatch.rs:14:5
   |
LL |     type const N: usize = "this isn't a usize";
   |     ^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&'static str`

error[E0308]: mismatched types
  --> $DIR/type-const-inherent-value-type-mismatch.rs:18:11
   |
LL | fn f() -> [u8; const { Struct::N }] {}
   |    -      ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `[u8; const { Struct::N }]`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
